fix: layout issues on mobile (#926)
* fix: layout shift issue on mobile

* fix: searchbar icon on mobile

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -261,7 +261,6 @@ body #__docusaurus {
     padding-block: 7px;
     padding-inline: 12px 6px;
     font: var(--font-label-2);
-    width: 173px;
     position: relative;
     color: var(--logto-color-text-secondary);
     justify-content: flex-start;
@@ -289,6 +288,8 @@ body #__docusaurus {
       color: var(--logto-color-text-secondary);
       padding: 0;
       margin-inline-start: 8px;
+      width: 90px;
+      text-align: start;
     }
 
     &:focus-within {
@@ -335,6 +336,28 @@ body #__docusaurus {
   }
 }
 
+@media (max-width: 768px) {
+  .navbar__items {
+    .DocSearch-Button {
+      border-radius: 50%;
+      padding: 0;
+      width: 36px;
+      height: 36px;
+
+      &:before {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      .DocSearch-Button-Container,
+      .DocSearch-Button-Keys,
+      .DocSearch-Button-Placeholder {
+        display: none;
+      }
+    }
+  }
+}
 
 // Side bar
 .theme-doc-sidebar-menu 
