--- a/src/theme/DocItem/Layout/index.module.scss
+++ b/src/theme/DocItem/Layout/index.module.scss
@@ -6,10 +6,7 @@
 
 .main {
   flex: 1;
-
-  &.hasDocToc {
-    max-width: min(1000px, calc(100vw - 680px));
-  }
+  width: 100%;
 }
 
 .docItemContainer {
@@ -23,8 +20,8 @@
   flex: 0 0 276px;
 }
 
-@media (max-width: 996px) {
-  .main {
-    max-width: 100%;
+@media (min-width: 997px) {
+  .main.hasDocToc {
+    max-width: min(1000px, calc(100vw - 680px));
   }
 }
